# inventory-reorder-engine

./: .gitignore  README.md  pyproject.toml
data/: README.md
reports/: backtest_metrics_lt2_example.json
scripts/: backtest.py  build_dataset.py  train.py
src/ire/app/: streamlit_app.py
src/ire/config/: settings.py
