[project]
name = "inventory-reorder-engine"
version = "0.1.0"
description = "Probabilistic demand forecasting + reorder recommendations (M5 / WI)."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=16.0",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "matplotlib>=3.9",
  "streamlit>=1.37",
  "tqdm>=4.66",
]

[tool.ruff]
line-length = 100
target-version = "py311"